Measure Tool crashes Blender when snapping (to vertices) in multi object edit mode #68291

Closed
opened 2019-08-06 07:38:07 +02:00 by Daniel · 6 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-05 18:52, hash: cdeda1fa6c
Worked: (optional)

Short description of error
When dragging the end points of the measure tool and holding down Ctrl (for snapping) blender crashes.
snap_crash.jpg

Exact steps for others to reproduce the error
See above, try it here yourself:
crashing_measure_tool.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-05 18:52, hash: `cdeda1fa6c` Worked: (optional) **Short description of error** When dragging the end points of the measure tool and holding down Ctrl (for snapping) blender crashes. ![snap_crash.jpg](https://archive.blender.org/developer/F7651210/snap_crash.jpg) **Exact steps for others to reproduce the error** See above, try it here yourself: [crashing_measure_tool.blend](https://archive.blender.org/developer/F7651213/crashing_measure_tool.blend)
Author

Added subscriber: @bestdani

Added subscriber: @bestdani
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Philipp Oeser self-assigned this 2019-08-06 09:55:48 +02:00

This issue was referenced by 199c37d7e4

This issue was referenced by 199c37d7e44776f382920632b334e9d21b06f6aa
Member

Crash only happens on linked meshes (since 59286ddcf8)
think we can use the same method as in snap_mesh_polygon from 59286ddcf8 in snap_mesh_edge_verts_mixed as well?

D5422 fixes...

Crash only happens on linked meshes (since 59286ddcf8) think we can use the same method as in `snap_mesh_polygon` from 59286ddcf8 in `snap_mesh_edge_verts_mixed` as well? [D5422](https://archive.blender.org/developer/D5422) fixes...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68291
No description provided.